# navette

./: .env  .gitignore  EMS.xlsx  Procfile  build.sh  creer_superuser.py  fix_sequences.py  fix_sequences.sql  fix_simple.py  info.xlsx  init_mobile.py  manage.py  patch.py  planning_db.py  pyproject.toml  render.yaml  requirements.txt  restaurer.bat  restaurer_maintenant.py  restaurer_simple.py  sauvegarde.bat  sauvegarde.py  sauvegarde_2026-05-13_22-24.sql  sauvegarde_2026-05-13_23-37.sql  sauvegarde_auto.py  sauvegarde_direct.py  temp_planning.xlsx
chauffeurs_mobile/: __init__.py  admin.py  apps.py  middleware.py  models.py  urls.py  views.py
chauffeurs_mobile/migrations/: 0001_initial.py  0002_planningexcel.py  0003_delete_planningexcel.py
gestion/: admin.py  apps.py  forms.py  models.py  urls.py  utils.py  views.py
gestion/geolocalisation/: apps.py  urls.py  utils.py  views.py
gestion/migrations/: 0001_initial.py  0002_planningstorage.py  0003_delete_planningstorage.py  0004_notificationadmin_utilisateur_and_more.py  0005_alter_notificationadmin_lu_par.py  0006_planningexcel.py  0007_alter_planningexcel_dates_disponibles_and_more.py
gestion/templatetags/: custom_filters.py
static/css/: custom.css
templates/gestion/: agents.html  base.html  carte.html  chauffeurs.html  courses_en_attente.html  courses_validation.html  detail_agent.html  detail_societe.html  detail_societe_paie.html  importer_agents.html  index.html  liste_transports.html  login.html  paie.html  (+7 more)
transport_app/: asgi.py  middleware.py  settings.py  settings_production.py  urls.py  wsgi.py
(+14 files in other folders)
